Add Tests, Add UserAgent, Upgrade Protocol Support to HTTP1.1 & remove whitespace. Plus VerBump

--- a/Booru.Net/Booru.Net.csproj
+++ b/Booru.Net/Booru.Net.csproj
@@ -23,6 +23,7 @@ Yande.re</Description>
     <PackageTags>booru imageboard api wrapper</PackageTags>
     <PackageLicenseUrl>https://github.com/exsersewo/Booru.Net/blob/master/LICENSE</PackageLicenseUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Version>1.0.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
