--- a/Booru.Net/Booru.Net.csproj
+++ b/Booru.Net/Booru.Net.csproj
@@ -16,14 +16,14 @@ Gelbooru,
 Konachan,
 E621 and
 Yande.re</Description>
-    <PackageProjectUrl>https://github.com/exsersewo/Booru.Net</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/systemexit/Booru.Net</PackageProjectUrl>
     <Copyright>exsersewo</Copyright>
-    <RepositoryUrl>https://github.com/exsersewo/Booru.Net</RepositoryUrl>
+    <RepositoryUrl>https://github.com/systemexit/Booru.Net</RepositoryUrl>
     <RepositoryType>Library</RepositoryType>
     <PackageTags>booru imageboard api wrapper</PackageTags>
     <PackageLicenseUrl>https://github.com/exsersewo/Booru.Net/blob/master/LICENSE</PackageLicenseUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Version>1.0.0.3</Version>
+    <Version>1.0.0.4</Version>
   </PropertyGroup>
 
   <ItemGroup>
